# PanFluExercise

./: CMakeLists.txt  README.md  config.h.in
cmake/modules/: FindBlitz.cmake  FindDisplayCluster.cmake  FindGSL.cmake  FindNetCDF.cmake
data/: age_groups_low_risk_fraction.csv  county_travel_fractions.csv  fips_age_group_populations.csv  fips_county_names_HSRs.csv  fips_populations_stratified.csv  stratifications.csv
data/ILI/: numCountyProviders.txt  providerNoiseData.txt  providerStartProbabilities.txt  providerStopProbabilities.txt
data/counties/: tl_2009_48_county00.dbf  tl_2009_48_county00.shp.xml  tl_2009_48_county00.shx
src/: ChartWidget.cpp  ChartWidget.h  ChartWidgetLine.cpp  ChartWidgetLine.h  ColorMap.cpp  ColorMap.h  EpidemicCasesWidget.cpp  EpidemicCasesWidget.h  EpidemicChartWidget.cpp  EpidemicChartWidget.h  EpidemicDataSet.cpp  EpidemicDataSet.h  EpidemicInfoWidget.cpp  EpidemicInfoWidget.h  EpidemicInitialCasesWidget.cpp  EpidemicInitialCasesWidget.h  EpidemicMapWidget.cpp  EpidemicMapWidget.h  EpidemicSimulation.cpp  EpidemicSimulation.h  Event.cpp  Event.h  EventGroupThreshold.cpp  EventGroupThreshold.h  EventMessage.h  EventMonitor.cpp  EventMonitor.h  EventMonitorWidget.cpp  EventMonitorWidget.h  IliMapWidget.cpp  IliMapWidget.h  MainWindow.cpp  MainWindow.h  MapShape.cpp  MapShape.h  MapWidget.cpp  MapWidget.h  Npi.cpp  Npi.h  NpiDefinitionWidget.cpp  (+41 more)
src/models/: MersenneTwister.h  random.cpp  random.h
src/models/disease/: StochasticSEATIRD.cpp  StochasticSEATIRD.h  StochasticSEATIRDEvent.cpp  StochasticSEATIRDEvent.h  StochasticSEATIRDSchedule.cpp  StochasticSEATIRDSchedule.h  iliView.cpp  iliView.h
util/: generate_batch_commands.py  generate_scenarios.sh  initialcases.xml  kill_batch_exercise.sh  parameters.xml  run_batch_exercise_160.sh  scenario_counties-bordercrossingweighted.csv  scenario_counties-populationweightedall.csv  scenario_counties-randomall.csv
